# WeiGuan

./: .gitignore  HANDOFF-codex-P10.md  HANDOFF-codex-P11.md  HANDOFF-codex-P12.md  HANDOFF-codex-P13-T8-fix-line.md  HANDOFF-codex-P13-color-remediation.md  HANDOFF-codex-P13.md  HANDOFF-codex-P14-T8-color.md  HANDOFF-codex-P14.md  HANDOFF-codex-P15.md  HANDOFF-codex-P6.md  HANDOFF-codex-P7-T11.md  HANDOFF-codex-P7-followup.md  HANDOFF-codex-P7.md  HANDOFF-codex-P8-T7-color-fix.md  HANDOFF-codex-P8.md  HANDOFF-codex-P9-T8-ui-polish.md  HANDOFF-codex-P9.md  HANDOFF-codex-plan-A.md  HANDOFF-codex-remediation-2.md  HANDOFF-codex.md  HANDOFF-designer-current-state.md  README.md
backend/: .env.example  env.example  pyproject.toml  requirements-engine.txt  requirements.txt
backend/scripts/: analyze_context_costs.py  run_llm_smoke.sh
backend/tests/: conftest.py  llm_config.py
backend/tests/adapter/: test_oasis_adapter.py
backend/tests/analysis/: test_analysis_projection.py  test_attention_context.py  test_attention_memory.py  test_context_cost_estimator.py  test_diffusion.py  test_flavor.py  test_influence.py  test_insights.py  test_insights_llm.py  test_llm_client.py  test_opinion.py  test_provider.py  test_retro.py  test_temporal.py
backend/tests/api/: test_analysis_route.py  test_flavor_route.py  test_identities_route.py  test_interview_snapshot.py  test_launch_persist_wiring.py  test_launches.py  test_llm_connectivity.py  test_llm_defaults.py  test_main_app.py  test_multi_run_route.py  test_orchestrate_route.py  test_perf_route.py  test_person_routes.py  (+7 more)
(+213 files in other folders)
