[project]
name = "weiguan-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = ["llm: 需要真实 LLM key 的端到端测试"]
