[project]
name = "weiguan-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.110,<0.112",
  "sse-starlette>=2.0,<3.0",
  "uvicorn>=0.29",
  "openai>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27,<0.28"]
engine = ["camel-oasis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
  "llm: 需要真实 LLM key 的端到端测试",
  "llm_effect: 需要真实 LLM key 的效果验收测试",
  "llm_connectivity: 只验证 OpenAI-compatible 配置、模型列表和最小 chat，不跑 OASIS",
]
